# hermod2

./: CMakeCache.txt  CMakeLists.txt  MainWindow.qml  Makefile  README.md  Readme.md  cmake_install.cmake  config.json  final_client.py  main.cpp
bifrost-simple/:  MainWindow.qml  CMakeLists.txt  tcp_client.cpp  tcp_client.h
bifrost-simple/Desktop_Qt_6_9_3_MinGW_64_bit-Debug/: CMakeCache.txt.prev
bifrost-simple/Desktop_Qt_6_9_3_MinGW_64_bit-Debug/bifrost_autogen/: deps
bifrost-simple/Desktop_Qt_6_9_3_MinGW_64_bit-Debug/bifrost_autogen/EWIEGA46WW/: moc_tcp_client.cpp
bifrost-simple/bifrost_autogen/: mocs_compilation.cpp
bifrost-simple/bifrost_autogen/EWIEGA46WW/: moc_tcp_client.cpp
polaris/: CMakeLists.txt  multi_client_server.cpp
